// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error on login 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -2,22 +2,24 @@
    <section
      class=\\"form\\"
    >
      <div
        class=\\"error\\"
-     />
+     >
+       An error occurs on login
+     </div>
      <label
        for=\\"login\\"
      >
        Login
      </label>
      <input
        id=\\"login\\"
        name=\\"login\\"
        placeholder=\\"Votre email ou pseudo\\"
        type=\\"text\\"
-       value=\\"\\"
+       value=\\"nevezide\\"
      />
      <label
        for=\\"password\\"
      >
        Mot de passe
@@ -25,11 +27,11 @@
      <input
        id=\\"password\\"
        name=\\"password\\"
        placeholder=\\"Votre mot de passe\\"
        type=\\"password\\"
-       value=\\"\\"
+       value=\\"nevezide\\"
      />
      <button>
        S'identifier
      </button>
    </section>"
`;

exports[`Login fail 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -2,22 +2,24 @@
    <section
      class=\\"form\\"
    >
      <div
        class=\\"error\\"
-     />
+     >
+       Login / Password Incorrect
+     </div>
      <label
        for=\\"login\\"
      >
        Login
      </label>
      <input
        id=\\"login\\"
        name=\\"login\\"
        placeholder=\\"Votre email ou pseudo\\"
        type=\\"text\\"
-       value=\\"\\"
+       value=\\"nevezide\\"
      />
      <label
        for=\\"password\\"
      >
        Mot de passe
@@ -25,11 +27,11 @@
      <input
        id=\\"password\\"
        name=\\"password\\"
        placeholder=\\"Votre mot de passe\\"
        type=\\"password\\"
-       value=\\"\\"
+       value=\\"incorrect\\"
      />
      <button>
        S'identifier
      </button>
    </section>"
`;

exports[`Login succeed 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -13,11 +13,11 @@
      <input
        id=\\"login\\"
        name=\\"login\\"
        placeholder=\\"Votre email ou pseudo\\"
        type=\\"text\\"
-       value=\\"\\"
+       value=\\"nevezide\\"
      />
      <label
        for=\\"password\\"
      >
        Mot de passe
@@ -25,11 +25,11 @@
      <input
        id=\\"password\\"
        name=\\"password\\"
        placeholder=\\"Votre mot de passe\\"
        type=\\"password\\"
-       value=\\"\\"
+       value=\\"nevezide\\"
      />
      <button>
        S'identifier
      </button>
    </section>"
`;

exports[`Show Login form 1`] = `
<div>
  <section
    class="form"
  >
    <div
      class="error"
    />
    <label
      for="login"
    >
      Login
    </label>
    <input
      id="login"
      name="login"
      placeholder="Votre email ou pseudo"
      type="text"
      value=""
    />
    <label
      for="password"
    >
      Mot de passe
    </label>
    <input
      id="password"
      name="password"
      placeholder="Votre mot de passe"
      type="password"
      value=""
    />
    <button>
      S'identifier
    </button>
  </section>
</div>
`;
